tests/ui/missing_discriminant.stderr
error: enum has variants that are not supported by this trait
 --> tests/ui/missing_discriminant.rs:5:10
  |
4 | #[derive(Clone, Copy, IntEnum)]
  |                       ------- in this derive macro expansion
5 | pub enum MissingDiscriminant {
  |          ^^^^^^^^^^^^^^^^^^^
  |
error: missing discriminant
 --> tests/ui/missing_discriminant.rs:7:19
  |
7 |     NoDiscriminant,
  |                   ^
  = note: this error originates in the derive macro `IntEnum` (in Nightly builds, run with -Z macro-backtrace for more info)
